Add details of July meeting (#72)
* add details

* review comments and add raffle images and zoom link

* sed /s /png/jpeg

* i think this accomplishes what Sorin asked for

* fix images

* Update meeting-short.md to remove backticks from the meeting URL

* Update 202507.md to set `ToADS HF: A Layer Cake of Protocols That Nobody Ordered` as title

* Update meeting-short.md

Add a newline between the raffle prizes and the link to the  meetings page.

* Update 202507.md

Change picture extensions from PNG to JPG

---------

Co-authored-by: Sorin Constantinescu <kn6yuh@gmail.com>

--- a/meetings/2025/202507.md
+++ b/meetings/2025/202507.md
@@ -1,11 +1,58 @@
-# July Monthly Meeting
+# ToADS HF: A Layer Cake of Protocols That Nobody Ordered
 
 * **Date**: `July 11, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `July Monthly Meeting`
-* **Presenter**: `To be announced`
+* **Topic**: `ToADS HF: A Layer Cake of Protocols That Nobody Ordered`
+* **Presenter**: `Ben Glick, KN6UBF`
 
 ## Details
+
+Why send text over HF the easy way when you could bake a layer cake of protocols no one asked for?
+ToADS HF (Text Over Audio-Digital-Sideband over HF) is a work-in-progress mode that combines GGWave modulation, RTTY-over-audio, and a CAT-controlled HF setup to reinvent the wheel (with extra layers). In this talk, Ben Glick, KN6UBF explores how this unnecessarily inelegant stack works, why it’s fun, and what it says about ham radio’s enduring love of solving simple problems the hard way. It’s a celebration of signal path absurdity, protocol cosplay, and the kind of engineering hobbyists do for no other reason than because we can.
+
+```
+        @..@           +------------------------+
+       (----)          |        Text Layer      |
+      ( >__< )         +------------------------+
+      ^^ ~~ ^^         |     Digital Layer      |
+     ToAD HF           +------------------------+
+  (Totally Overdone)   |      Audio Layer       |
+                       +------------------------+
+                       |     Sideband Layer     |
+                       +------------------------+
+                       |       HF Layer         |
+                       +------------------------+
+
+```
+
+## Raffle
+
+<details>
+  <summary><b>Click to see the raffle prizes!</b></summary>
+  <table>
+    <tr>
+        <th>1st prize</th>
+        <th>2nd prize</th>
+        <th>3rd prize</th>
+        <th>4th prize</th>
+        <th>5th prize</th>
+    </tr>
+    <tr>
+        <td><img src="/meetings/2025/raffle/202507-1.jpg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202507-2.jpg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202507-3.jpg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202507-4.jpg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202507-5.jpg" alt="image"></td>
+    </tr>
+    <tr>
+        <td>YAESU FT-4XR UHF/VHF HT</td>
+        <td>iFixit Mako Driver Kit</td>
+        <td>Nitecore NU25 400 UL Ultra Lightweight Headlamp</td>
+        <td>GoldStar (LG) Digital Multimeter DM-311</td>
+        <td>VCELINK Wire Stripper + KLEIN TOOLS Flush Cutter</td>
+    </tr>
+  </table>  
+</details>
 
 ## Presentation materials
 
