--- a/meetings/2025/202507.md
+++ b/meetings/2025/202507.md
@@ -56,5 +56,7 @@ ToADS HF (Text Over Audio-Digital-Sideband over HF) is a work-in-progress mode t
 
 ## Presentation materials
 
+* *PDF*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202507_ToadsHF_a_Layercake_of_Protocols_That_Nobody_Ordered.pdf?raw=true){:target="_blank"}] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202507_ToadsHF_a_Layercake_of_Protocols_That_Nobody_Ordered.pdf?raw=true){:target="_blank"}]
+
 {% include meetings-template.md %}
 
