Roll over the website after the July meeting has ended (#86)
* Roll over to the next meeting, and modify the meeting template to match the current format in use

* the current meeting was still pointing to July, so this time I'm swithing to August for real

* Adjusting date for July and August meetings in the same format as the rest of the meetings

--- a/meetings/2025/202508.md
+++ b/meetings/2025/202508.md
@@ -1,6 +1,6 @@
-# __MONTH__ Monthly Meeting
+# August Monthly Meeting
 
-* **Date**: `__DATE__`
+* **Date**: `Aug 1, 2025`
 * **Time**: `07:00 PM Pacific Time`
 * **Topic**: `To be announced`
 * **Presenter**: `To be announced`
