Add a small yellow raffle ticket so it's more obvious what to click to see the prizes (#93)
* try to add a raffle ticket image to make it more obvious people should click to expand

* make the ticket much smaller

* make the ticket much smaller

* make the ticket much smaller

* make the ticket much smaller

* make the ticket much smaller

* make the ticket much smaller

* add the same raffle ticket image in the meetings page

* slightly change the message by removing raffle which is implied

--- a/meetings/2025/202508.md
+++ b/meetings/2025/202508.md
@@ -18,7 +18,7 @@ In addition, Jacob will share the history of Columbia's amateur radio club, W2AE
 ## Raffle
 
 <details>
-  <summary><b>Click to see the raffle prizes!</b></summary>
+  <summary><b>Click the ticket to see the prizes! <img src="/images/raffle-ticket.png" alt="raffle-ticket" width="90"></b></summary>
   <table>
     <tr>
         <th>1st prize</th>
